--- a/style.css
+++ b/style.css
@@ -26,10 +26,13 @@ body {
     margin: 5px 0;
     border: none;
     border-radius: 4px;
-    background-color: #007BFF;
+    background-color: #656b71;
     color: white;
     cursor: pointer;
 }
-.options button:hover {
+/* .options button:hover {
     background-color: #0056b3;
+} */
+#next {
+    background-color: #00b371;
 }
