--- a/style.css
+++ b/style.css
@@ -34,12 +34,22 @@ body {
     background-color: #0056b3;
 } */
 #next {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: none;
+    border-radius: 4px;
+    background-color: #656b71;
+    color: white;
+    cursor: pointer;
     background-color: #00b371;
 }
 #wineimg {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 180px;
+    max-height: 180px;
 }
-.td {
+td {
     text-align: center;
+    vertical-align: middle;
 }
