--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ body {
 /* .options button:hover {
     background-color: #0056b3;
 } */
+.options {
+    max-height: 300px;
+    overflow-y: auto;
+}
 #next {
     display: block;
     width: 100%;
