--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
+    margin: auto;
 }
 .question {
     margin-bottom: 20px;
@@ -36,6 +37,12 @@ body {
 .options {
     max-height: 300px;
     overflow-y: auto;
+}
+.logo{
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    padding-left: 20px;
 }
 #next {
     display: block;
