--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 .logo{
     display: block;
     margin: 0 auto;
-    width: 200px;
-    padding-left: 20px;
+    width: 275px;
+    /* padding-left: 20px; */
 }
 #next {
     display: block;
@@ -59,6 +59,9 @@ body {
 #wineimg {
     max-width: 180px;
     max-height: 180px;
+}
+.outer-container{
+    width: 100%
 }
 td {
     text-align: center;
