--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 .logo{
     display: block;
     margin: 0 auto;
-    width: 275px;
+    width: 60%;
     /* padding-left: 20px; */
 }
 #next {
