--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     width: 60%;
     /* padding-left: 20px; */
 }
-#next {
+#next, #back{
     display: block;
     width: 100%;
     padding: 10px;
