--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 .outer-container{
     max-width: 450px;
 }
-td {
+td, tr {
     text-align: center;
     vertical-align: middle;
     width: 100%;
